--- a/requirements.txt
+++ b/requirements.txt
@@ -13,3 +13,10 @@ pymorphy3==2.0.1
 pymorphy3-dicts-ru==2.4.417150.4580142
 yake @ git+https://github.com/LIAAD/yake@0fa58cceb465162b6bd0cab7ec967edeb907fbcc
 confection==0.1.4
+websockets==12.0
+channels==4.1.0
+channels-redis==4.2.0
+coreschema==0.0.4
+asgiref==3.7.2
+djangorestframework-simplejwt==5.3.1
+uvicorn[standart]
